# egui_grpc_example

./: .gitignore  LICENSE  README.md
.github/workflows/: ubuntu_client.yml  ubuntu_server.yml
client/: Cargo.toml  build.rs  index.html
client/src/: main.rs
client/src/gui/: application.rs
client/src/proto/: rpc.rs
client/web/: manifest.json
proto_messages/: messages.proto
server/: go.mod  main.go
server/core/: logger.go
server/proto/: README
server/web/: handlers.go
