[package]
name = "test"
version = "0.1.0"
edition = "2021"
authors = ["Zvonimir Pervan <z.pervan65@gmail.com>"]

[dependencies]
egui = "0.22"
eframe = { version = "0.22", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
] }
prost = "0.11"
#tokio = { version = "1.29", features = ["rt-multi-thread"] }
tonic = { version = "0.9.2", default-features = false, features = [
    "prost",
    "codegen",
] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
tonic-web-wasm-client = "0.4"
log = "0.4"

[build-dependencies]
tonic-build = { version = "0.9.2", default-features = false, features = [
    "prost",
] }

# Native (desktop) application
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
tonic = "0.9"

# Web (WASM) application
#[target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm-bindgen-futures = "0.4"
#tonic-web-wasm-client = "0.4"

[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
